# zosimos

./: Cargo.toml  Readme.md
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: roadmap.md
lib/lang/: Cargo.toml
lib/std/: Cargo.toml  build.rs
lib/std/src/: lib.rs
lib/zosimos/: .gitignore  Cargo.toml
lib/zosimos/src/: command.rs  lib.rs  pool.rs  program.rs  run.rs  shaders.rs
lib/zosimos/src/program/: encoder.rs
lib/zosimos/src/shaders/: bilinear.rs  box3.rs  distribution_normal2d.rs  fractal_noise.rs  inject.rs  oklab.rs  palette.rs  solid_rgb.rs  srlab2.rs  stage.rs
lib/zosimos/tests/: async.rs  blend.rs  buffer.rs  color_support.rs  custom.rs  direct.rs  generic.rs  knobs.rs  loop.rs  util.rs
src/: run.rs
