[workspace]
members = ["bin/dioxus-editor", "bin/editor", "bin/sh", "lib/lang", "lib/zosimos"]
resolver = "3"

[workspace.dependencies.image-canvas]
version = "0.5.1"
[workspace.dependencies.wgpu]
version = "25.0"

[workspace.dependencies.zosimos]
path = "lib/zosimos"
[workspace.dependencies.zosimos-lang]
path = "lib/lang"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
