[workspace]
members = ["bin/dioxus-editor", "bin/sh", "lib/lang", "lib/zosimos"]
resolver = "3"

[workspace.dependencies.image]
version = "0.25.6"
default-features = false
features = ["png"]
[workspace.dependencies.image-canvas]
version = "0.5.1"
[workspace.dependencies.tracing]
version = "0.1.41"
[workspace.dependencies.tracing-subscriber]
version = "0.3.19"
default-features = false
[workspace.dependencies.tracing-web]
version = "0.1.3"
[workspace.dependencies.web-sys]
version = "0.3.77"
features = ["HtmlCanvasElement"]
[workspace.dependencies.wgpu]
version = "25.0"
default-features = false

[workspace.dependencies.zosimos]
path = "lib/zosimos"
[workspace.dependencies.zosimos-lang]
path = "lib/lang"

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
