[package]
name = "zosimos"
version = "0.0.0"
authors = ["Aurelia Molzer <5550310+197g@users.noreply.github.com>"]
edition = "2021"
license = "MPL-2.0"

[dependencies]
bytemuck = "1.4"
serde.workspace = true
tracing.workspace = true
waker-fn = "1.1"

[dependencies.image]
workspace = true

[dependencies.image-canvas]
workspace = true

[dependencies.log]
version = "0.4"

[dependencies.palette]
version = "0.7"
default-features = false
features = ["libm"]

[dependencies.slotmap]
version = "1"
default-features = false

[dependencies.wgpu]
workspace = true
default-features = false
features = ["spirv"]

## Local, Testing dependencies.

[dev-dependencies]
crc32fast = "1.2"
# Until next image version breaks this..
blockhash = "1"
env_logger = "0.11"
zosimos-std.workspace = true

[dev-dependencies.image]
workspace = true
features = ["png"]

[dev-dependencies.tokio]
version = "1"
features = ["macros", "rt-multi-thread"]

[dev-dependencies.wgpu]
workspace = true
features = ["vulkan"]

[[test]]
name = "buffer"

[[test]]
name = "blend"

[[test]]
name = "direct"
